removed the build commands for testing

--- a/trunk/Castlerock/Castlerock.Web/Castlerock.Web.csproj
+++ b/trunk/Castlerock/Castlerock.Web/Castlerock.Web.csproj
@@ -346,9 +346,11 @@
     </VisualStudio>
   </ProjectExtensions>
   <PropertyGroup>
-    <PostBuildEvent>rename $(ProjectDir)Properties Properties1</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PreBuildEvent>rename $(ProjectDir)Properties1 Properties</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
 </Project>
