COMMENT: Changed the properties in state view to be "content" so it is published as part of the build. Also update the release web.config to have the correct pdf folder

--- a/trunk/Castlerock/Castlerock.Web/Castlerock.Web.csproj
+++ b/trunk/Castlerock/Castlerock.Web/Castlerock.Web.csproj
@@ -191,7 +191,7 @@
     <Content Include="Views\Member\Downloads.cshtml" />
     <None Include="Properties\PublishProfiles\Castlerock Local.pubxml" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
-    <None Include="Views\Properties\PropertiesInState.cshtml" />
+    <Content Include="Views\Properties\PropertiesInState.cshtml" />
     <Content Include="Views\Properties\Property.ascx" />
     <Content Include="Views\Shared\GoogleAnalytics.ascx" />
     <Content Include="Views\Shared\List.ascx" />
