--- a/trunk/Castlerock/Castlerock.Web/Web.Release.config
+++ b/trunk/Castlerock/Castlerock.Web/Web.Release.config
@@ -14,7 +14,9 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
-
+  <appSettings>
+    <add key="PdfFolder" value="166" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+  </appSettings>
 
   <connectionStrings>
     <add name="Castlerock" connectionString="Server=tcp:s78xis0mwb.database.windows.net;Database=Castlerock;User ID=Brontsy@s78xis0mwb;Password=Zest2517;Trusted_Connection=False;Encrypt=True;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
