--- a/trunk/Castlerock/Castlerock.Web/Web.Release.config
+++ b/trunk/Castlerock/Castlerock.Web/Web.Release.config
@@ -15,7 +15,7 @@
     </connectionStrings>
   -->
   <appSettings>
-    <add key="PdfFolder" value="166" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add key="PdfFolder" value="166" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
 
   <connectionStrings>
