--- a/trunk/Castlerock/Castlerock.Web/Web.config
+++ b/trunk/Castlerock/Castlerock.Web/Web.config
@@ -17,7 +17,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="Castlerock" connectionString="Server=LUKES\SQLEXPRESS;Database=Portal;User ID=Portal;Password=Password1;Trusted_Connection=False;Encrypt=False;" />
+    <add name="Castlerock" connectionString="Server=BRONTSY-MSI;Database=Portal;User ID=Portal;Password=Password1;Trusted_Connection=False;Encrypt=False;" />
   </connectionStrings>
   
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
