--- a/trunk/Portal/Portal.Web/Portal.Web/Web.config
+++ b/trunk/Portal/Portal.Web/Portal.Web/Web.config
@@ -14,8 +14,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <connectionStrings>
-    <add name="Castlerock" connectionString="Server=LUKES\SQLEXPRESS;Database=Portal;User ID=Portal;Password=Password1;Trusted_Connection=False;Encrypt=False;" />
-    <add name="Portal" connectionString="Server=LUKES\SQLEXPRESS;Database=Portal;User ID=Portal;Password=Password1;Trusted_Connection=False;Encrypt=False;" />
+    <add name="Castlerock" connectionString="Server=BRONTSY-MSI;Database=Portal;User ID=Portal;Password=Password1;Trusted_Connection=False;Encrypt=False;" />
+    <add name="Portal" connectionString="Server=BRONTSY-MSI;Database=Portal;User ID=Portal;Password=Password1;Trusted_Connection=False;Encrypt=False;" />
   </connectionStrings>
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
