changed the dev connection string

--- a/trunk/Portal/Portal.Web/Portal.Web/Web.Debug.config
+++ b/trunk/Portal/Portal.Web/Portal.Web/Web.Debug.config
@@ -22,7 +22,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="Castlerock" connectionString="Server=LUKES\SQLEXPRESS;Database=Portal;User ID=Portal;Password=Password1;Trusted_Connection=False;Encrypt=False;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add name="Castlerock" connectionString="Server=BRONTSY-MSI;Database=Portal;User ID=Portal;Password=Password1;Trusted_Connection=False;Encrypt=False;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
   </connectionStrings>
   
   <system.web>
