--- a/trunk/Portal/Portal.Web/Portal.Web/Portal.Web.csproj
+++ b/trunk/Portal/Portal.Web/Portal.Web/Portal.Web.csproj
@@ -367,6 +367,12 @@
     <None Include="Content\less\common\variables.less" />
     <None Include="Content\less\membership\membership.less" />
     <None Include="Content\less\site.less" />
+    <Content Include="Web.Uat.config">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Web.Release.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Properties\PublishProfiles\Local Disk.pubxml" />
     <None Include="Properties\PublishProfiles\portalauslink - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\portalauslink - Web Deploy.pubxml" />
@@ -382,13 +388,6 @@
     <Content Include="Views\Shared\Messages\Confirmation.cshtml" />
     <Content Include="Views\Shared\Messages\Error.cshtml" />
     <Content Include="Web.config">
-      <SubType>Designer</SubType>
-    </Content>
-    <Content Include="Web.Debug.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </Content>
-    <Content Include="Web.Release.config">
-      <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\Shared\ImageUpload.cshtml" />
@@ -490,6 +489,15 @@
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Uat|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
