--- a/trunk/Auslink/Auslink.Web/Web.Uat.config
+++ b/trunk/Auslink/Auslink.Web/Web.Uat.config
@@ -15,7 +15,7 @@
 
 
   <connectionStrings>
-    <add name="Castlerock" connectionString="Server=tcp:s78xis0mwb.database.windows.net;Database=Castlerock;User ID=Brontsy@s78xis0mwb;Password=Zest2517;Trusted_Connection=False;Encrypt=True;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add name="Castlerock" connectionString="Server=Brontsy-MSI;Database=Portal;User ID=Portal;Password=Password1;Trusted_Connection=False;Encrypt=False;" />
   </connectionStrings>
   
 
