--- a/trunk/Castlerock/Castlerock.Web/Web.Uat.config
+++ b/trunk/Castlerock/Castlerock.Web/Web.Uat.config
@@ -11,16 +11,16 @@
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="PdfFolder" value="164"/>
+    
   </appSettings>
 
-
   <connectionStrings>
-    <add name="Castlerock" connectionString="Server=tcp:s78xis0mwb.database.windows.net;Database=Castlerock;User ID=Brontsy@s78xis0mwb;Password=Zest2517;Trusted_Connection=False;Encrypt=True;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add name="Castlerock" connectionString="Server=BRONTSY-MSI;Database=Portal;User ID=Portal;Password=Password1;Trusted_Connection=False;Encrypt=False;" />
   </connectionStrings>
   
-
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
-
     <session-factory>
       <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
       <property name="connection.driver_class">NHibernate.Driver.SqlClientDriver</property>
@@ -31,10 +31,11 @@
       <property name="cache.use_second_level_cache">true</property>
       <property name="cache.use_query_cache">true</property>
       <property name="current_session_context_class">web</property>
-      <mapping assembly="Portal.Membership" />
+      <mapping assembly="Castlerock.Properties" />
       <mapping assembly="Portal.Websites" />
+      <mapping assembly="Portal.Membership" />
+      <mapping assembly="Portal.FileManager" />
     </session-factory>
-    
   </hibernate-configuration>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
@@ -46,12 +47,8 @@
         <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
-    <customErrors defaultRedirect="/Error/500" mode="Off">
-      <error statusCode="500" redirect="/Error/500" />
-      <error statusCode="404" redirect="/Error/404" />
-    </customErrors>
     <authentication mode="Forms">
-      <forms loginUrl="/ComingSoon" timeout="2880" />
+      <forms loginUrl="~/Account/LogOn" timeout="2880" />
     </authentication>
     <pages>
       <namespaces>
@@ -77,12 +74,32 @@
         <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
+        <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.0.4000" newVersion="3.2.0.4000" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Configuration" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
         <assemblyIdentity name="System.Web" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.2.0.4000" newVersion="3.2.0.4000" />
+        <assemblyIdentity name="System.Data" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Xml" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Core" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Xml.Linq" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
