--- a/trunk/Castlerock/Castlerock.Web/Castlerock.Web.csproj
+++ b/trunk/Castlerock/Castlerock.Web/Castlerock.Web.csproj
@@ -214,10 +214,8 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <None Include="Web.Release.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </None>
-    <None Include="Web.Uat.config" />
+    <Content Include="Web.Release.config" />
+    <Content Include="Web.Uat.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\Site.Master" />
