fixed release web.config connection strings

--- a/trunk/Portal/Portal.Web/Portal.Web/Web.Release.config
+++ b/trunk/Portal/Portal.Web/Portal.Web/Web.Release.config
@@ -14,7 +14,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <connectionStrings>
-    <add name="Castlerock" connectionString="Server=tcp:s78xis0mwb.database.windows.net;Database=Castlerock;User ID=Brontsy@s78xis0mwb;Password=Zest2517;Trusted_Connection=False;Encrypt=True;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add name="Castlerock" connectionString="Server=tcp:s78xis0mwb.database.windows.net;Database=Castlerock;User ID=Brontsy@s78xis0mwb;Password=Zest2517;Trusted_Connection=False;Encrypt=True;" />
   </connectionStrings>
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
