--- a/trunk/Castlerock/Castlerock.Web/Web.Release.config
+++ b/trunk/Castlerock/Castlerock.Web/Web.Release.config
@@ -18,7 +18,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="Castlerock" connectionString="Server=tcp:s78xis0mwb.database.windows.net;Database=Castlerock;User ID=Brontsy@s78xis0mwb;Password=Zest2517;Trusted_Connection=False;Encrypt=True;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add name="Castlerock" connectionString="Server=tcp:s78xis0mwb.database.windows.net;Database=Castlerock;User ID=Brontsy@s78xis0mwb;Password=Zest2517;Trusted_Connection=False;Encrypt=True;" />
   </connectionStrings>
   
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
