--- a/trunk/Auslink/Auslink.Web/Auslink.Web.csproj
+++ b/trunk/Auslink/Auslink.Web/Auslink.Web.csproj
@@ -253,6 +253,7 @@
     <None Include="Properties\PublishProfiles\Auslink Local Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\auslinkproperty - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\auslinkproperty - Web Deploy.pubxml" />
+    <Content Include="Views\PropertyPortfolio\Townsville.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
