--- a/trunk/Castlerock/Castlerock.Web/Castlerock.Web.csproj
+++ b/trunk/Castlerock/Castlerock.Web/Castlerock.Web.csproj
@@ -215,7 +215,9 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Web.Release.config" />
-    <Content Include="Web.Uat.config" />
+    <Content Include="Web.Uat.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\Site.Master" />
