--- a/trunk/Castlerock/Castlerock.Web/Web.Uat.config
+++ b/trunk/Castlerock/Castlerock.Web/Web.Uat.config
@@ -18,7 +18,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="Castlerock" connectionString="Server=BRONTSY-MSI;Database=Portal;User ID=Portal;Password=Password1;Trusted_Connection=False;Encrypt=False;" />
+    <add name="Castlerock" connectionString="Server=Brontsy-MSI;Database=Portal;User ID=Portal;Password=Password2;Trusted_Connection=False;Encrypt=False;" />
   </connectionStrings>
   
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
