--- a/trunk/Portal/Portal.Web/Portal.Web/Portal.Web.csproj
+++ b/trunk/Portal/Portal.Web/Portal.Web/Portal.Web.csproj
@@ -44,6 +44,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="dotless.Core">
+      <HintPath>..\packages\dotless.1.4.0.0\lib\dotless.Core.dll</HintPath>
+    </Reference>
     <Reference Include="Iesi.Collections, Version=1.0.1.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
@@ -367,12 +370,6 @@
     <None Include="Content\less\common\variables.less" />
     <None Include="Content\less\membership\membership.less" />
     <None Include="Content\less\site.less" />
-    <Content Include="Web.Uat.config">
-      <SubType>Designer</SubType>
-    </Content>
-    <Content Include="Web.Release.config">
-      <SubType>Designer</SubType>
-    </Content>
     <None Include="Properties\PublishProfiles\Local Disk.pubxml" />
     <None Include="Properties\PublishProfiles\portalauslink - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\portalauslink - Web Deploy.pubxml" />
