--- a/trunk/Portal/Portal.Web/Portal.Web/packages.config
+++ b/trunk/Portal/Portal.Web/Portal.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="dotless" version="1.4.0.0" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="jQuery" version="1.8.1" />
   <package id="jQuery.UI.Combined" version="1.8.23" />
