--- a/trunk/Portal/Portal.Web/Portal.Web/Portal.Web.csproj
+++ b/trunk/Portal/Portal.Web/Portal.Web/Portal.Web.csproj
@@ -346,30 +346,78 @@
     <Content Include="Areas\Messages\Views\Messages\Index.cshtml" />
     <Content Include="Areas\CMS\Views\Shared\Controls\FileBrowser.cshtml" />
     <Content Include="Areas\CMS\Views\Shared\Controls\FileBrowser.Fields.cshtml" />
-    <Content Include="Content\less\common\accordion.less" />
-    <Content Include="Content\less\common\alerts.less" />
-    <Content Include="Content\less\common\buttons.less" />
-    <Content Include="Content\less\common\carousel.less" />
-    <Content Include="Content\less\common\common.less" />
-    <None Include="Content\less\cms\cms.less" />
-    <Content Include="Content\less\file-manager\file-manager.less" />
-    <Content Include="Content\less\common\dropdowns.less" />
-    <Content Include="Content\less\common\fancy-box.less" />
-    <Content Include="Content\less\common\footer.less" />
-    <Content Include="Content\less\common\forms.less" />
-    <Content Include="Content\less\common\layouts.less" />
-    <Content Include="Content\less\common\lists.less" />
-    <Content Include="Content\less\common\mixins.less" />
-    <Content Include="Content\less\common\navigation.less" />
-    <Content Include="Content\less\common\reset.less" />
-    <Content Include="Content\less\common\scaffolding.less" />
-    <Content Include="Content\less\common\tabs.less" />
-    <Content Include="Content\less\common\tooltips.less" />
-    <Content Include="Content\less\common\type.less" />
-    <Content Include="Content\less\common\validation-errors.less" />
-    <Content Include="Content\less\common\variables.less" />
-    <Content Include="Content\less\membership\membership.less" />
-    <Content Include="Content\less\site.less" />
+    <Content Include="Content\less\common\accordion.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\alerts.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\buttons.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\carousel.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\common.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\cms\cms.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\file-manager\file-manager.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\dropdowns.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\fancy-box.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\footer.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\forms.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\layouts.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\lists.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\mixins.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\navigation.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\reset.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\scaffolding.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\tabs.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\tooltips.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\type.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\validation-errors.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\common\variables.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\membership\membership.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\less\site.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="Properties\PublishProfiles\Local Disk.pubxml" />
     <None Include="Properties\PublishProfiles\portalauslink - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\portalauslink - Web Deploy.pubxml" />
