--- a/trunk/Portal/Portal.Web/Portal.Web/Portal.Web.csproj
+++ b/trunk/Portal/Portal.Web/Portal.Web/Portal.Web.csproj
@@ -351,6 +351,7 @@
     <Content Include="Content\less\common\buttons.less" />
     <Content Include="Content\less\common\carousel.less" />
     <Content Include="Content\less\common\common.less" />
+    <Content Include="Areas\Property-Editor\Views\Properties\New.cshtml" />
     <None Include="Content\less\cms\cms.less" />
     <Content Include="Content\less\file-manager\file-manager.less" />
     <Content Include="Content\less\common\dropdowns.less" />
@@ -393,6 +394,7 @@
     </None>
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </None>
     <None Include="Web.Uat.config">
       <DependentUpon>Web.config</DependentUpon>
