upgraded to mvc 4.
added new property (Glenorchy)

--- a/trunk/Auslink/Auslink.Web/Web.config
+++ b/trunk/Auslink/Auslink.Web/Web.config
@@ -8,14 +8,14 @@
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
   </configSections>
   <appSettings>
-    <add key="webpages:Version" value="1.0.0.0" />
+    <add key="webpages:Version" value="2.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
 
 
   <connectionStrings>
-    <add name="Castlerock" connectionString="Server=Brontsy-MSI;Database=Portal;User ID=Portal;Password=Password2;Trusted_Connection=False;Encrypt=False;" />
+    <add name="Castlerock" connectionString="Server=BRONTSY-DESKTOP;Database=Portal;User ID=sa;Password=Pa$$word1;Trusted_Connection=False;Encrypt=False;" />
   </connectionStrings>
   
 
@@ -39,11 +39,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
-        <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+
       </assemblies>
     </compilation>
     <customErrors defaultRedirect="/Error/500" mode="Off">
@@ -73,16 +69,16 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
         <assemblyIdentity name="System.Web" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.2.0.4000" newVersion="3.2.0.4000" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="4.0.0.0-4.0.0.1" newVersion="4.0.0.1" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
