--- a/trunk/Auslink/packages/repositories.config
+++ b/trunk/Auslink/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Auslink.Cms\packages.config" />
   <repository path="..\Auslink.FileManager\packages.config" />
   <repository path="..\Auslink.Membership\packages.config" />
   <repository path="..\Auslink.QuarterlyUpdates\packages.config" />
