changed content type!

--- a/trunk/Castlerock/Castlerock.Web.New/Castlerock.Web.New.csproj
+++ b/trunk/Castlerock/Castlerock.Web.New/Castlerock.Web.New.csproj
@@ -196,21 +196,21 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <None Include="Views\AboutUs\Index.cshtml" />
-    <None Include="Views\ContactUs\Index.cshtml" />
-    <None Include="Views\Disclaimer\Index.cshtml" />
-    <None Include="Views\Experience\Index.cshtml" />
+    <Content Include="Views\AboutUs\Index.cshtml" />
+    <Content Include="Views\ContactUs\Index.cshtml" />
+    <Content Include="Views\Disclaimer\Index.cshtml" />
+    <Content Include="Views\Experience\Index.cshtml" />
     <Content Include="Views\Errors\404.aspx" />
     <Content Include="Views\Errors\404a.aspx" />
     <Content Include="Views\Errors\500.aspx" />
     <Content Include="Views\Login\Login.cshtml" />
-    <None Include="Views\Investors\Index.cshtml" />
+    <Content Include="Views\Investors\Index.cshtml" />
     <Content Include="Views\Member\Downloads.cshtml" />
-    <None Include="Views\PrivacyPolicy\Index.cshtml" />
-    <None Include="Views\Properties\Australia.cshtml" />
-    <None Include="Views\Properties\AustralianMap.cshtml" />
+    <Content Include="Views\PrivacyPolicy\Index.cshtml" />
+    <Content Include="Views\Properties\Australia.cshtml" />
+    <Content Include="Views\Properties\AustralianMap.cshtml" />
     <Content Include="Views\Properties\Index.cshtml" />
-    <None Include="Views\Properties\Show.cshtml" />
+    <Content Include="Views\Properties\Show.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
