included missing files

--- a/trunk/Auslink/Auslink.Web.New/Auslink.Web.New.csproj
+++ b/trunk/Auslink/Auslink.Web.New/Auslink.Web.New.csproj
@@ -319,9 +319,9 @@
     <Content Include="Areas\Admin\Content\less\pages\cms.less" />
     <Content Include="Areas\Admin\Views\Cms\Index - Copy.cshtml" />
     <Content Include="Areas\Admin\Views\Cms\EditPage.cshtml" />
-    <None Include="Areas\Admin\Views\Cms\EditPageForm.cshtml" />
-    <None Include="Areas\Admin\Views\Cms\AddPage.cshtml" />
-    <None Include="Areas\Admin\Views\Cms\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Cms\EditPageForm.cshtml" />
+    <Content Include="Areas\Admin\Views\Cms\AddPage.cshtml" />
+    <Content Include="Areas\Admin\Views\Cms\Index.cshtml" />
     <None Include="Properties\PublishProfiles\file.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
